<resources>
    <string name="app_name">Bandwagon</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="due">Due: </string>
    <string name="task">Task Name: </string>
    <string name="details">Details: </string>
    <string name="taskDescription">Please enter a description of the task</string>
    <string name="dueDescription">Please enter the day the task is due</string>
    <string name="detailsDescription">Please enter task details</string>
    <string name="enterGroupName">Group Name: </string>
    <string name="createGroup">Create New Group</string>
    <string name="group">Group: </string>
    <string name="groupText">Group </string>
    <string name="createTask">Create New Task</string>
    <string name="groupDescription">Description</string>
    <string name="addMembers">Invite By Username</string>
    <string name="alternateInviteMembers">Or you can invite members using this code: </string>
    <string name="settings">Settings</string>
    <string name="accountSettings">Account Settings</string>
    <string name="displayName">Display Name: </string>
    <string name="displayNameShown">xxxxxxxxxxx</string>
    <string name="profilePhotoText">Profile Photo: </string>
    <string name="email">Email: </string>
    <string name="exampleEmail">example@example.com</string>
    <string name="password">Password: </string>
    <string name="examplePassword">**********</string>
    <string name="appSettings">App Settings</string>
    <string name="completedOption">See how many have completed</string>
    <string name="timeOption">See time remaining</string>
    <string name="changePassword">Change Password</string>
    <string name="passwordReset">Password Reset</string>
    <string name="oldPassword">Old Password: </string>
    <string name="newPassword">New Password: </string>
    <string name="confirmNewPassword">Confirm New Password: </string>
    <string name="or">Or</string>
    <string name="emailNewPassword">Email me a new password</string>
    <string name="oldPasswordHint">Please enter your old password</string>
    <string name="newPasswordHint">Please enter your new password</string>
    <string name="confirmNewPasswordHint">Please confirm your new password</string>
    <string name="createNewGroup">Create a New Group</string>
    <string name="plus">+</string>
    <string name="addTask">Add a New Task</string>
    <string name="className">Class Name</string>
    <string name="muteClass">Mute Class</string>
    <string name="leaveClass">Leave Class</string>
    <string name="inviteMembers">Invite Members</string>
    <string name="adminOnly">Admin Only</string>
    <string name="closeClass">Close Class</string>
    <string name="changeClassName">Change Class Name</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="done">Done</string>
    <string name="sign_out">Sign Out</string>
    <string name="createNew">Add New</string>
    <string name="taskWord">Task</string>
    <string name="pickTime">Due Time: </string>
    <string name="enterPickTime">Select Due Time </string>
    <string name="pickDate">Due Date: </string>
    <string name="enterPickDate">Select Due Date</string>
    <string name="taskName">Task Name: </string>
    <string name="taskNameHint">Name of Task</string>
    <string name="that_is_in">That is in </string>
    <string name="exampleNumber">xx</string>
    <string name="taskname">Task Name</string>
    <string name="days">" days "</string>
    <string name="hours_and">" hours and "</string>
    <string name="minutes">" minutes"</string>
    <string name="sampleDateWithTime">Month xx, xxxx at xx:xx</string>
    <string name="percentageDescription">of people have completed this task</string>
    <string name="timeAboveLabel">It is taking people</string>
    <string name="timeBelowLabel">minutes to complete this task</string>
    <string name="exampleDescription">blahblah blah</string>
    <string name="edit">Edit</string>
    <string name="pieDescription">An example Pie diagram</string>
    <string name="clockDescription">A clock with a random time</string>
    <string name="addUser">Add User</string>
    <string name="assignments">Assignments</string>
    <string name="viewGroupMembers">View Group Members</string>
    <string name="groupMembers">Group Members</string>
    <string name="groups">Groups</string>
    <string name="user">User</string>
    <string name="backToGroupAssignments">Back to Group Assignments</string>
    <string name="editTask">Edit Task</string>
    <string-array name="dropdownNames">
        <item>Class One</item>
        <item>Class Two</item>
        <item>Class Three</item>
    </string-array>

</resources>
