<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createNewTaskOrGroupMenu">

    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/taskButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif-black"
        android:onClick="performCreateNewTask"
        android:text="@string/addTask"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/groupButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-black"
        android:onClick="performCreateNewGroup"
        android:text="@string/createNewGroup"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/taskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>